--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
   db:
     image: postgres:13.0-alpine
     volumes:
-      - /var/lib/postgresql/data/
+      - postgres_data:/var/lib/postgresql/data
     env_file:
       - ./.env
   web:
@@ -30,3 +30,4 @@ services:
 volumes:
   static_value:
   media_value:
+  postgres_data:
